@@ -30,8 +30,8 @@
  */
 DADocument::DADocument(const DADatabase * database_, om_docid did_,
 		       int heavy_duty_)
-        : Document(database_), database(database_), did(did_),
-	  rec(NULL), heavy_duty(heavy_duty_)
+        : Document(database_, did_), database(database_), rec(NULL),
+	  heavy_duty(heavy_duty_)
 {
 }
 
