@@ -33,7 +33,8 @@ class NetworkDocument : public Document {
 
 	std::map<om_keyno, OmKey> keys;
 
-	NetworkDocument(const Database *database_, const std::string & doc_,
+	NetworkDocument(const Database *database_, om_docid did_,
+			const std::string & doc_,
 			const std::map<om_keyno, OmKey> &keys_);
 
 	// Stop copying
